<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/SettingsButton"
        android:layout_width="208dp"
        android:layout_height="81dp"
        android:text="@string/settings_button_text"
        style="@style/Widget.ScoutingAppV3Dark.secondary1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="839dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/MatchNumberIntroductionText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                style="@style/Theme.ScoutingAppV3Dark.massiveText"
                android:text="@string/match_number_introduction_text" />

            <TextView
                android:id="@+id/MatchNumberPlaceHolder"
                style="@style/Theme.ScoutingAppV3Dark.massiveText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/match_number_placeholder_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/YouAreScoutingText"
                style="@style/Theme.ScoutingAppV3Dark.coralText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/you_are_scouting_text" />

            <Spinner
                android:id="@+id/ScoutingAssignMentSpinner"
                style="@style/Theme.ScoutingAppV3Dark.coralText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="5">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/GoButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                style="@style/Widget.ScoutingAppV3Dark.secondary1"
                android:text="@string/go_button_welcome_screen_text" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>