<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.end_game_scouting.EndGameScoutingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/EndGameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="30sp"
            tools:text="EndGame" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/End Game Stuff"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="15">

                <TextView
                    android:id="@+id/ParkText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Barge Points:"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/DidNotPark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Did Not Park" />

                    <CheckBox
                        android:id="@+id/ParkedOnGround"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Parked On Ground" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/ShallowCageHang"
                        android:layout_width="104dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Shallow Cage Hang" />

                    <CheckBox
                        android:id="@+id/DeepCageHang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Deep Cage Hang" />
                </LinearLayout>

                <TextView
                    android:id="@+id/WhoWon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Game Outcome"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Lost" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Tied" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Win " />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="2"
                    android:progress="3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="15">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notes"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/match_notes"
                        android:layout_width="0dp"
                        android:layout_height="304dp"
                        android:layout_weight="1"
                        android:autofillHints="Notes about match"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/notes_about_match"
                        android:inputType="textMultiLine"
                        tools:ignore="VisualLintTextFieldSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="15"
                        android:text="@string/submit"
                        tools:ignore="VisualLintButtonSize" />

                    <CheckBox
                        android:id="@+id/MichelBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="Better Then Average" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>